tdf#111789: TextBox shadow propeties are not saved to PPTX

Change-Id: I0c858676e1fc02a72b4b6bfd10f512d8e9166061